[project]
name = "record-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "funasr>=1.3.1",
    "moviepy>=2.2.1",
    "opencc-python-reimplemented>=0.1.7",
    "pydub>=0.25.1",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
